--- a/Imigration.Web/Views/Home/Index.cshtml
+++ b/Imigration.Web/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
                             <li><a href=""> تغییر رمز عبور </a></li>
                             <li><a href=""> پرسش های من </a></li>
                             <li><a href=""> پاسخ های من </a></li>
-                            <li><a href=""> خروج از حساب کاربری </a></li>
+                            <li><a asp-controller="Account " asp-action="Logout"> خروج از حساب کاربری </a></li>
                         </ul>
                     </div>
                 </div>
