--- a/Imigration.Web/Views/Shared/_FooterRefrences.cshtml
+++ b/Imigration.Web/Views/Shared/_FooterRefrences.cshtml
@@ -1,3 +1,4 @@
 ﻿<script src="/js/bootstrap.min.js"></script>
 <script src="/js/public.js"></script>
 <script src="/common/sweetalert/sweetalert.js"></script>
+<script src="/common/custom/custom.js</script>
