--- a/Imigration.Web/Views/Shared/_Layout.cshtml
+++ b/Imigration.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 
     @await RenderSectionAsync("MetaTags", false)
 
-    <partial name="_HeaderReferences" />
+    <partial name="_HeaderRefrences" />
 
     @await RenderSectionAsync("Styles", false)
 </head>
