--- a/Imigration.Web/Areas/UserPanel/Views/Shared/Components/UserSideBar/UserSidebar.cshtml
+++ b/Imigration.Web/Areas/UserPanel/Views/Shared/Components/UserSideBar/UserSidebar.cshtml
@@ -10,8 +10,8 @@
             <img src="@PathTools.DefaultUserAvatar@Model.Avatar">
         </div>
         <div class="detail gold">
-            <h3> @Model.GetUserDisplayName() </h3>
-            <span> عضویت :  @Model.CreateDate.ToShamsi() </span>
+            @* <h3> @Model.GetUserDisplayName() </h3> *@
+    @*         <span> عضویت :  @Model.CreateDate.ToShamsi() </span> *@
         </div>
         <ul>
             <li><a href="" data-toggle="tooltip" data-placement="top" title=" داشبورد "><i class="icon-settings"></i></a></li>
