--- a/Imigration.Web/Areas/UserPanel/Views/Shared/Components/UserSideBar/UserSidebar.cshtml
+++ b/Imigration.Web/Areas/UserPanel/Views/Shared/Components/UserSideBar/UserSidebar.cshtml
@@ -1,23 +1,25 @@
-﻿@using Imigration.Application.Statics;
+﻿@using Imigration.Application.Extensions
+@using Imigration.Application.Statics;
 @model Imigration.Domains.Entities.Account.User
+
 <!-- right side -->
 <div class="right-side">
     <!-- avatar -->
-    <div class="quick-access layer-style">
+    <div class="quick-access layer-style" id="UserInfoBox">
         <div class="img-layer">
-            <input  type="file" onchange="UploadUserAvatar('@Url.Action("ChangeUserAvatar","Home" , new {area = "UserPanel"})')" name="UserAvatar" id="UserAvatar" accept=".png,.jpg, .jpeg ." class="display-none"/>
-            <a href="javascript:void(0)" class="change-image"><i class="icon-pencil-edit"></i></a>
-            <img src="@PathTools.DefaultUserAvatar@Model.Avatar">
+            <input type="file" onchange="UploadUserAvatar('@Url.Action("ChangeUserAvatar", "Home", new {area = "UserPanel"})')" name="UserAvatar" id="UserAvatar" accept=".png, .jpg, .jpeg" class="display-none" />
+            <a onclick="OpenAvatarInput()" class="change-image"><i class="icon-pencil-edit"></i></a>
+            <img src="@PathTools.UserAvatarPath@Model.Avatar">
         </div>
         <div class="detail gold">
-            @* <h3> @Model.GetUserDisplayName() </h3> *@
-    @*         <span> عضویت :  @Model.CreateDate.ToShamsi() </span> *@
+            <h3> @Model.GetUserDisplayName() </h3>
+@*             <span> عضویت : @Model.CreateDate.ToShamsi() </span> *@
         </div>
         <ul>
-            <li><a href="" data-toggle="tooltip" data-placement="top" title=" داشبورد "><i class="icon-settings"></i></a></li>
-            <li><a href="" data-toggle="tooltip" data-placement="top" title=" ویرایش اطلاعات "><i class="icon-profile"></i></a></li>
+            <li><a asp-action="Index" asp-controller="Home" asp-area="UserPanel" data-toggle="tooltip" data-placement="top" title=" داشبورد "><i class="icon-settings"></i></a></li>
+            <li><a asp-action="EditInfo" asp-controller="Account" asp-area="UserPanel" data-toggle="tooltip" data-placement="top" title=" ویرایش اطلاعات "><i class="icon-profile"></i></a></li>
             <li><a href="" data-toggle="tooltip" data-placement="top" title=" تغییر رمز عبور "><i class="icon-safe"></i></a></li>
-            <li><a href="" data-toggle="tooltip" data-placement="top" title=" خروج از حساب "><i class="icon-power-symbol"></i></a></li>
+            <li><a asp-action="Logout" asp-controller="Account" data-toggle="tooltip" data-placement="top" title=" خروج از حساب "><i class="icon-power-symbol"></i></a></li>
         </ul>
     </div>
     <!-- /avatar -->
@@ -26,7 +28,9 @@
         <header><h3> منوی دسترسی </h3><i class="icon-chevron-down"></i></header>
         <div class="inner">
             <ul>
-                <li><a href="/"> مدیریت رزومه  </a>  </li>
+                <li><a asp-action="Index" asp-controller="Home" asp-area="UserPanel"> داشبورد  </a>  </li>
+                <li><a asp-action="EditInfo" asp-controller="Account" asp-area="UserPanel"> ویرایش اطلاعات کاربری  </a>  </li>
+                <li><a asp-action="Logout" asp-controller="Account"> خروج  </a>  </li>
             </ul>
         </div>
     </section>
