--- a/Imigration.Web/Areas/UserPanel/Views/Account/EditInfo.cshtml
+++ b/Imigration.Web/Areas/UserPanel/Views/Account/EditInfo.cshtml
@@ -4,7 +4,8 @@
 @{
     ViewData["Title"] = "ویرایش اطلاعات کاربری";
     Layout = "_UserPanelLayout";
-     var states = ViewData["States"] as List<SelectListViewModel>;
+    var states = ViewData["States"] as List<SelectListViewModel>;
+    var cities = ViewData["Cities"] as List<SelectListViewModel>;
 }
 
 @section Scripts
@@ -85,8 +86,16 @@
                     <!-- select -->
                     <div class="select-layer">
                         <label asp-for="CityId"></label>
-                        <select asp-for="CityId" disabled>
+                        <select asp-for="CityId" >
                             <option value="">لطفا شهر خود را انتخاب کنید</option>
+                            @if (cities != null && cities.Any())
+                            {
+                                foreach (var state in cities)
+                                {
+                                    <option value="@state.Id">@state.Title</option>
+
+                                }
+                            }
                         </select>
                     </div>
                     <!-- /select -->
