--- a/Imigration.Web/Areas/UserPanel/Views/Shared/Components/UserSideBar/UserSidebar.cshtml
+++ b/Imigration.Web/Areas/UserPanel/Views/Shared/Components/UserSideBar/UserSidebar.cshtml
@@ -13,8 +13,8 @@
         </div>
         <div class="detail gold">
             <h3> @Model.GetUserDisplayName() </h3>
-             <span> عضویت : @Model.CreateDate.ToShamsi() </span> 
-        </div>
+           @*   <span> عضویت : @Model.CreateDate.ToShamsi() </span> 
+      *@   </div>
         <ul>
             <li><a asp-action="Index" asp-controller="Home" asp-area="UserPanel" data-toggle="tooltip" data-placement="top" title=" داشبورد "><i class="icon-settings"></i></a></li>
             <li><a asp-action="EditInfo" asp-controller="Account" asp-area="UserPanel" data-toggle="tooltip" data-placement="top" title=" ویرایش اطلاعات "><i class="icon-profile"></i></a></li>
