--- a/Imigration.Web/Areas/UserPanel/Views/Shared/Components/UserSideBar/UserSidebar.cshtml
+++ b/Imigration.Web/Areas/UserPanel/Views/Shared/Components/UserSideBar/UserSidebar.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Imigration.Application.Extensions
 @using Imigration.Application.Statics
+@using Imigration.Domains.Enums
 @model Imigration.Domains.Entities.Account.User
 
 <!-- right side -->
@@ -11,10 +12,37 @@
             <a onclick="OpenAvatarInput()" class="change-image"><i class="icon-pencil-edit"></i></a>
             <img src="@PathTools.UserAvatarPath@Model.Avatar">
         </div>
-        <div class="detail gold">
-            <h3> @Model.GetUserDisplayName() </h3>
-           @*   <span> عضویت : @Model.CreateDate.ToShamsi() </span> 
-      *@   </div>
+        @{
+            var className = string.Empty;
+
+            if (Model.Medal != null)
+            {
+                switch (Model.Medal)
+                {
+                    case UserMedal.Bronze:
+                        className = "bronze";
+                        break;
+                    case UserMedal.Silver:
+                        className = "silver";
+                        break;
+                    case UserMedal.Gold:
+                        className = "gold";
+                        break;
+                }
+            }
+        }
+        <div class="detail @className">
+            @if (Model.Medal != null)
+            {
+                <h3> <i class="icon-quality"></i> @Model.GetUserDisplayName() </h3>
+            }
+            else
+            {
+                <h3>@Model.GetUserDisplayName() </h3>
+            }
+   @*    <span> عضویت : @Model.CreateDate.ToShamsi() </span> *@
+            <span> امتیاز کاربر : @Model.Score </span>
+        </div>
         <ul>
             <li><a asp-action="Index" asp-controller="Home" asp-area="UserPanel" data-toggle="tooltip" data-placement="top" title=" داشبورد "><i class="icon-settings"></i></a></li>
             <li><a asp-action="EditInfo" asp-controller="Account" asp-area="UserPanel" data-toggle="tooltip" data-placement="top" title=" ویرایش اطلاعات "><i class="icon-profile"></i></a></li>
@@ -37,4 +65,4 @@
     </section>
     <!-- /side bar -->
 </div>
-<!-- /right side -->
+<!-- /right side -->->
