--- a/Imigration.Web/wwwroot/common/custom/custom.css
+++ b/Imigration.Web/wwwroot/common/custom/custom.css
@@ -16,6 +16,10 @@
 .mb-8 {
     margin-bottom: 8px !important;
 }
+.current {
+    color : green !important;
+    border :green 1px solid !important;
+}
 
 .input-style {
     position: relative !important;
