--- a/Imigration.Web/wwwroot/common/custom/custom.css
+++ b/Imigration.Web/wwwroot/common/custom/custom.css
@@ -12,6 +12,9 @@
 .ms-helper {
     margin-top: 50px !important;
 }
+.nt-15{
+    margin-top : 15px !important;
+}
 
 .mb-8 {
     margin-bottom: 8px !important;
