--- a/Imigration.Web/Views/Shared/_TopMenuPartial.cshtml
+++ b/Imigration.Web/Views/Shared/_TopMenuPartial.cshtml
@@ -1,5 +1,8 @@
 ﻿<ul>
     <li><a asp-action="CreateQuestion" asp-controller="Question">  Submit new Question </a></li>
+
     <li><a asp-action="QuestionList" asp-controller="Question">  LIst new Question </a></li>
+
+    <li><a asp-action="FilterTags" asp-controller="Question">  LIst new Tag </a></li>
 
 </ul>
