--- a/Imigration.Web/Views/Question/QuestionList.cshtml
+++ b/Imigration.Web/Views/Question/QuestionList.cshtml
@@ -57,13 +57,14 @@
                 <div class="questions-layer">
                     <!-- questions list -->
                     <div class="questions-list">
+
                         @if (Model.Entities.Any())
                         {
                             foreach (var question in Model.Entities)
                             {
                                 var className = string.Empty;
 
-                                if (question.HasAnyAnswer)
+                                if (question.HasAnyAnswer && !question.HasAnyAnswer)
                                 {
                                     className = "answered";
                                 }
@@ -103,6 +104,7 @@
                                 <!-- /item -->
                             }
                         }
+
                     </div>
                     <!-- /questions list -->
                 </div>
