--- a/Imigration.Web/Views/Question/QuestionDetail.cshtml
+++ b/Imigration.Web/Views/Question/QuestionDetail.cshtml
@@ -52,16 +52,16 @@
                         <span><i> @Model.Score </i> امتیاز </span>
                     </header>
 
-                    <article>
+                    <article id="QuestionDetailMainBox">
                         <div class="inner">
 
                             @Html.Raw(Model.Content)
 
                             <div class="rating-layer">
                                 <div class="scoring-layer">
-                                    <button class="plus"><i class="icon-caret-up"></i></button>
+                                    <button onclick="ScoreUpQuestion('@Model.Id')" class="plus"><i class="icon-caret-up"></i></button>
                                     <span> @Model.Score </span>
-                                    <button class="negative"><i class="icon-caret-down"></i></button>
+                                    <button onclick="ScoreDownQuestion('@Model.Id')" class="negative"><i class="icon-caret-down"></i></button>
                                 </div>
                                 <div class="star-rating">
                                     <button><i class="icon-star"></i></button>
