--- a/Imigration.Web/wwwroot/common/custom/custom.css
+++ b/Imigration.Web/wwwroot/common/custom/custom.css
@@ -8,7 +8,9 @@
 .mt-50 {
     margin-top: 50px
 }
-
+.gold-color {
+    color :#ffb301 !important;
+}
 .ms-helper {
     margin-top: 50px !important;
 }
