--- a/Imigration.Web/Views/Home/Index.cshtml
+++ b/Imigration.Web/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@{
+﻿@using Imigration.Domains.ViewModels.Question
+
+@{
     ViewData["Title"] = "صفحه اصلی";
     Layout = "_Layout";
+    var questions = ViewData["Questions"] as FilterQuestionViewModel;
 }
 
 @section Styles
@@ -20,9 +23,9 @@
             </header>
 
             <div class="search-form">
-                <form action="" method="">
-                    <input type="text" name="" placeholder=" دنبال چه موضوعی میگردی ؟ ">
-                    <button><i class="icon-search-1"></i></button>
+                <form asp-controller="Question" asp-action="QuestionList" method="get" id="QuestionSearchForm">
+                    <input id="QuestionSearchInput" name="Title" question-autocomplete type="text" placeholder=" دنبال چه موضوعی میگردی ؟ ">
+                    <button type="submit"><i class="icon-search-1"></i></button>
                 </form>
             </div>
         </div>
@@ -37,18 +40,21 @@
                 <partial name="_TopMenuPartial" />
             </nav>
 
-            @if(User.Identity.IsAuthenticated)
-            {
-                @await Component.InvokeAsync("UserMainMenuBox");
-            }
-            else
-            {
-                <div class="signout-status">
-                    <i class="icon-profile"></i>
-                    <a asp-action="Login" asp-controller="Account"> ورود / </a>
-                    <a asp-action="Register" asp-controller="Account"> عضویت </a>
-                </div>
-            }
+            <div class="clientarea-layer">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @await Component.InvokeAsync("UserMainMenuBox")
+                    ;
+                }
+                else
+                {
+                    <div class="signout-status">
+                        <i class="icon-profile"></i>
+                        <a asp-action="Login" asp-controller="Account"> ورود / </a>
+                        <a asp-action="Register" asp-controller="Account"> عضویت </a>
+                    </div>
+                }
+            </div>
 
             <div class="clearfix"></div>
 
@@ -60,95 +66,54 @@
 <div class="container">
     <!-- questions -->
     <div class="questions-layer">
-        <!-- Top -->
-        <div class="top-layer">
-            <a href="" class="linkbutton blue"> ثبت پرسش جدید </a>
-            <div class="filter-layer">
-                <form action="" method="">
-                    <div class="select-layer">
-                        <select>
-                            <option> جدیدترین پرسش ها </option>
-                            <option> پربحث ترین پرسش ها </option>
-                            <option> پرامتیازترین پرسش ها </option>
-                            <option> پرسش های یک هفته اخیر  </option>
-                            <option> پرسش های یک ماه اخیر  </option>
-                        </select>
-                    </div>
-                    <button><i class="icon-sort"></i></button>
-                </form>
-            </div>
-        </div>
-        <!-- /Top -->
         <!-- questions list -->
         <div class="questions-list">
-            <!-- item -->
-            <article>
-                <h2><a href="">بهترین و ساده ترین روش برای پیاده سازی گرید ویو در لاراول نسخه ی آخر</a></h2>
-                <span> 0 <i class="icon-comment-1"></i> </span>
-                <ul>
-                    <li> پرسیده شده توسط  <a href=""> شیوا محمدی </a> در 1 ساعت پیش </li>
-                    <li> بدون پاسخ </li>
-                </ul>
-                <div class="detail">
-                    <div class="tags-layer">
-                        <a href=""> JavaScript </a>
-                        <a href=""> Jquery </a>
-                        <a href=""> PHP </a>
-                        <a href=""> Framework </a>
-                    </div>
-                    <div class="left-side">
-                        <span> 3 <i class="icon-star"></i> </span>
-                        <span> 256 <i class="icon-eye"></i> </span>
-                    </div>
-                </div>
-            </article>
-            <!-- /item -->
-            <!-- item -->
-            <article class="answered">
-                <h2><a href="">بهترین و ساده ترین روش برای پیاده سازی گرید ویو در لاراول نسخه ی آخر</a></h2>
-                <span> 236 <i class="icon-comment-1"></i> </span>
-                <ul>
-                    <li> پرسیده شده توسط  <a href=""> شیوا محمدی </a> در 1 ساعت پیش </li>
-                    <li> آخرین پاسخ توسط <a href=""> میترا رحیمی </a> در 15 دقیقه پسش </li>
-                </ul>
-                <div class="detail">
-                    <div class="tags-layer">
-                        <a href=""> Jquery </a>
-                        <a href=""> JavaScript </a>
-                        <a href=""> PHP </a>
-                        <a href=""> Ecommerce </a>
-                        <a href=""> Framework </a>
-                    </div>
-                    <div class="left-side">
-                        <span> 983 <i class="icon-star"></i> </span>
-                        <span> 264 <i class="icon-eye"></i> </span>
-                    </div>
-                </div>
-            </article>
-            <!-- /item -->
-            <!-- item -->
-            <article class="selected">
-                <h2><a href="">بهترین و ساده ترین روش برای پیاده سازی گرید ویو در لاراول نسخه ی آخر</a></h2>
-                <span> 1.2K <i class="icon-comment-1"></i> </span>
-                <ul>
-                    <li> پرسیده شده توسط  <a href=""> شیوا محمدی </a> در 1 ساعت پیش </li>
-                    <li> آخرین پاسخ توسط <a href=""> میترا رحیمی </a> در 15 دقیقه پسش </li>
-                </ul>
-                <div class="detail">
-                    <div class="tags-layer">
-                        <a href=""> Jquery </a>
-                        <a href=""> JavaScript </a>
-                        <a href=""> PHP </a>
-                        <a href=""> Ecommerce </a>
-                        <a href=""> Framework </a>
-                    </div>
-                    <div class="left-side">
-                        <span> 1.3K <i class="icon-star"></i> </span>
-                        <span> 264 <i class="icon-eye"></i> </span>
-                    </div>
-                </div>
-            </article>
-            <!-- /item -->
+            @if (questions != null && questions.Entities.Any())
+            {
+                foreach (var question in questions.Entities)
+                {
+                    var className = string.Empty;
+
+                    if (question.HasAnyAnswer && !question.HasAnyTrueAnswer)
+                    {
+                        className = "answered";
+                    }
+                    else if (question.HasAnyTrueAnswer)
+                    {
+                        className = "selected";
+                    }
+
+                    <!-- item -->
+                    <article class="@className">
+                        <h2><a asp-action="QuestionDetail" asp-controller="Question" asp-route-questionId="@question.QuestionId">@question.Title</a></h2>
+                        <span> @question.AnswersCount <i class="icon-comment-1"></i> </span>
+                        <ul>
+                            <li> پرسیده شده توسط <a href="javascript:void(0)"> @question.UserDisplayName </a> @question.CreateDate </li>
+                            @if (!string.IsNullOrEmpty(question.AnswerByDisplayName) && !string.IsNullOrEmpty(question.AnswerByCreateDate))
+                            {
+                                <li> پاسخ داده شده توسط <a href="javascript:void(0)"> @question.AnswerByDisplayName </a> @question.AnswerByCreateDate </li>
+                            }
+                            else
+                            {
+                                <li> پاسخی ثبت نشده است . </li>
+                            }
+                        </ul>
+                        <div class="detail">
+                            <div class="tags-layer">
+                                @foreach (var tag in question.Tags)
+                                {
+                                    <a asp-action="QuestionListBtTag" asp-controller="Question" asp-route-tagName="@tag"> @tag </a>
+                                }
+                            </div>
+                            <div class="left-side">
+                                <span> @question.Score <i class="icon-star"></i> </span>
+                                <span> @question.ViewCount <i class="icon-eye"></i> </span>
+                            </div>
+                        </div>
+                    </article>
+                    <!-- /item -->
+                }
+            }
         </div>
         <!-- /questions list -->
     </div>
@@ -162,4 +127,5 @@
 @section Scripts
     {
     <script src="/js/home.js"></script>
+    <partial name="_autocompletePartial" />
 }
