--- a/Imigration.Web/Views/Shared/_Footer.cshtml
+++ b/Imigration.Web/Views/Shared/_Footer.cshtml
@@ -3,17 +3,12 @@
         <div class="container">
             <ul>
                 <li><a href=""> صفحه اصلی </a></li>
-                <li><a href=""> ورود به سایت </a></li>
-                <li><a href=""> عضویت در سایت </a></li>
-                <li><a href=""> لیست آگهی های استخدام </a></li>
-                <li><a href=""> لیست کاربران </a></li>
-                <li><a href=""> لیست تگ ها </a></li>
-                <li><a href=""> ثبت پرسش جدید </a></li>
-                <li><a href=""> قوانین سایت </a></li>
-                <li><a href=""> راهنمای سایت </a></li>
-                <li><a href=""> پر بحث ترین تگ ها</a></li>
-                <li><a href=""> پربازدیدترین آگهی ها </a></li>
-                <li><a href=""> پر امتیازترین کاربران </a></li>
+                <li><a asp-controller="Account" asp-action="Login" href=""> ورود به سایت </a></li>
+                <li><a asp-controller="Account" asp-action="Register" href=""> عضویت در سایت </a></li>
+                <li><a asp-controller="Question" asp-action="FilterTags" href=""> لیست تگ ها </a></li>
+                <li><a asp-controller="Question" asp-action="QuestionList" href=""> لیست پرسش ها </a></li>
+                <li><a  asp-controller="Question" asp-action="CreateQuestion" href=""> ثبت پرسش جدید </a></li>
+         
             </ul>
         </div>
     </div>
@@ -29,7 +24,7 @@
                 <a href=""><i class="icon-rss"></i></a>
             </div>
             <div class="copyright">
-                <p>کلیه حقوق مادی و معنوی این سایت متعلق به <a href=""> شرکت برنامه نویسان پیشرو پایدار </a> می باشد . طراحی و برنامه نویسی <a href=""> برنامه نویسان </a></p>
+                <p>کلیه حقوق مادی و معنوی این سایت متعلق به <a href="https://Imigration.de"> شرکت برنامه نویسان پیشرو پایدار </a> می باشد . طراحی و برنامه نویسی <a href=""> برنامه نویسان </a></p>
             </div>
             <div class="clearfix"></div>
         </div>
