--- a/Imigration.Web/Areas/Admin/Views/Shared/_AdminNavbar.cshtml
+++ b/Imigration.Web/Areas/Admin/Views/Shared/_AdminNavbar.cshtml
@@ -37,7 +37,7 @@
                             <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
                                 <li class="dropdown-footer">
                                     <a asp-action="Logout" asp-controller="Account" asp-area="">
-                                        خروج از سیستم
+                                        خروج از سیستم nabashad
                                     </a>
                                 </li>
                             </ul>
