--- a/Imigration.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Imigration.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -36,11 +36,9 @@
         </div>
     </div>
     <partial name="_AdminModals" />
-
     <partial name="_AdminScripts" />
-
+    <partial name="_JqueryValidation" />
     <partial name="_Notification" />
-
     @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
