--- a/Imigration.Web/wwwroot/common/custom/custom.css
+++ b/Imigration.Web/wwwroot/common/custom/custom.css
@@ -8,12 +8,24 @@
 .mt-50 {
     margin-top: 50px
 }
+
+.admin-error-style{
+    color : tomato;
+    font-size: 13px;
+}
+
+.mb-30 {
+    margin-bottom: 30px !important;
+}
+
 .gold-color {
     color :#ffb301 !important;
 }
+
 .ms-helper {
     margin-top: 50px !important;
 }
+
 .nt-15{
     margin-top : 15px !important;
 }
@@ -21,6 +33,7 @@
 .mb-8 {
     margin-bottom: 8px !important;
 }
+
 .current {
     color : green !important;
     border :green 1px solid !important;
