--- a/Imigration.Web/Areas/Admin/Views/Home/_FilterTagsPartial.cshtml
+++ b/Imigration.Web/Areas/Admin/Views/Home/_FilterTagsPartial.cshtml
@@ -36,6 +36,9 @@
                                     تعداد استفاده
                                 </th>
                                 <th class="text-center">
+                                    Date sunb,it استفاده
+                                </th>
+                                <th class="text-center">
                                     وضعیت
                                 </th>
                                 <th class="text-center">
