--- a/Imigration.Web/Areas/Admin/Views/Home/_FilterTagsPartial.cshtml
+++ b/Imigration.Web/Areas/Admin/Views/Home/_FilterTagsPartial.cshtml
@@ -70,7 +70,7 @@
                                         <a href="javascript:void(0);" class="btn btn-danger btn-circle btn-xs">
                                             <i class="glyphicon glyphicon-trash"></i>
                                         </a>
-                                        <a href="javascript:void(0);" class="btn btn-sky btn-circle btn-xs">
+                                        <a onclick="loadEditTagModal("@tag.Id")" href="javascript:void(0);" class="btn btn-sky btn-circle btn-xs">
                                             <i class="glyphicon glyphicon-edit"></i>
                                         </a>
                                     </td>
