--- a/Imigration.Web/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
+++ b/Imigration.Web/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
@@ -12,6 +12,27 @@
         </li>
 
         <li>
+            <a asp-action="QuestionsList" asp-controller="Question" asp-area="Admin">
+                <i class="menu-icon fa fa-question"></i>
+                <span class="menu-text"> لیست سوالات </span>
+            </a>
+        </li>
+
+        <li>
+            <a asp-action="QuestionList" asp-controller="Question" asp-area="Admin">
+                <i class="menu-icon fa fa-question"></i>
+                <span class="menu-text"> Liste SOalat  </span>
+            </a>
+        </li>
+
+        <li>
+            <a asp-action="ShowOnlineUsers" asp-controller="Home" asp-area="Admin">
+                <i class="menu-icon fa fa-users"></i>
+                <span class="menu-text"> کاربران آنلاین </span>
+            </a>
+        </li>
+
+        <li>
             <a href="#" onclick="loadTagsModal('@Url.Action("LoadFilterTagsPartial", "Home", new { area = "Admin" })')">
                 <i class="menu-icon fa fa-tags"></i>
                 <span class="menu-text"> مدیریت تگ ها </span>
