--- a/Imigration.Web/Views/Shared/_FooterReferences.cshtml
+++ b/Imigration.Web/Views/Shared/_FooterReferences.cshtml
@@ -4,3 +4,11 @@
 <script src="/common/waitme/waitMe.min.js"></script>
 <script src="/common/datepicker/kamadatepicker.min.js"></script>
 <script src="/common/custom/custom.js"></script>
+
+
+@if (User.Identity!.IsAuthenticated)
+{
+	<script src="~/common/SignalR/signal-min.js"></script>
+	<script src="~/common/SignalR/client-online-users.js"></script>
+
+}
