--- a/Imigration.Web/Views/Question/QuestionDetail.cshtml
+++ b/Imigration.Web/Views/Question/QuestionDetail.cshtml
@@ -16,6 +16,13 @@
     <link rel="stylesheet" type="text/css" href="/css/question.css">
 }
 
+@section MetaTags
+{
+    <meta name="description" content="@Model.Title"/>
+    <meta />
+    
+}
+
 @section Header
     {
     <partial name="_Header" />
