--- a/Imigration.Web/Views/Shared/_Layout.cshtml
+++ b/Imigration.Web/Views/Shared/_Layout.cshtml
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title> @ViewData["Title"] </title>
-    <meta name="googlebot" content="index,follow">
-    <meta name="robots" content="noodp,noydir">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="@($"{Context.Request.Scheme}://{Context.Request.Host + Context.Request.Path}")" />
 
     @await RenderSectionAsync("MetaTags", false)
 
@@ -16,18 +14,18 @@
     @await RenderSectionAsync("Styles", false)
 </head>
 <body>
-    <script src="js/modernizr.js"></script>
+    <script src="/js/modernizr.js"></script>
 
     @await RenderSectionAsync("Header", true)
- 
-     @RenderBody()
+
+    @RenderBody()
 
     <partial name="_Footer" />
 
     <partial name="_FooterReferences" />
 
-     <partial name="_Notification" /> 
+    <partial name="_Notification" />
 
-    @await RenderSectionAsync("Scripts", false) 
+    @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
