--- a/Imigration.Web/wwwroot/css/page.css
+++ b/Imigration.Web/wwwroot/css/page.css
@@ -1,5 +1,4 @@
-
-.post-blog-layer .blog-col article .img-layer img{
+.post-blog-layer .blog-col article .img-layer img {
     -webkit-transition : all 0.2s linear 0s; -moz-transition : all 0.2s linear 0s; -ms-transition : all 0.2s linear 0s; -o-transition : all 0.2s linear 0s; transition : all 0.2s linear 0s
 }
 .page-style.default .main-content .detail-layer ul:after,
@@ -524,6 +523,11 @@
         padding-left: 0;
         float: none
     }
+    .page-style.default .right-col {
+        width: 100% !important;
+        padding-left: 0 !important;
+        float: none !important
+    }
     .pagination-layer{
         margin-bottom: 25px
     }
@@ -558,6 +562,11 @@
         width: 100%;
         margin-bottom: 20px
     }
+    .page-style.default .right-col {
+        width: 100% !important;
+        padding-left: 0 !important;
+        float: none !important
+    }
     .post-blog-layer header .category-dropdown{
         width: 100%;
         position: relative;
@@ -575,11 +584,22 @@
 
 @media screen and (max-width :420px){
    .blog-col{width: 100%;float: none}
+    .page-style.default .right-col {
+        width: 100% !important;
+        padding-left: 0 !important;
+        float: none !important
+    }
 }
+
 @media screen and (max-width :360px){
    .page-style.default .right-col .top-layer .filter-layer{
         width: 100%;
         display: block;
         float: none
    }
+    .page-style.default .right-col {
+        width: 100% !important;
+        padding-left: 0 !important;
+        float: none !important
+    }
 }
