--- a/Imigration.Web/Views/Shared/_Footer.cshtml
+++ b/Imigration.Web/Views/Shared/_Footer.cshtml
@@ -1,30 +1,25 @@
-﻿<footer>
+﻿﻿<footer>
     <div class="top-footer">
         <div class="container">
             <ul>
-                <li><a href=""> صفحه اصلی </a></li>
-                <li><a asp-controller="Account" asp-action="Login" href=""> ورود به سایت </a></li>
-                <li><a asp-controller="Account" asp-action="Register" href=""> عضویت در سایت </a></li>
-                <li><a asp-controller="Question" asp-action="FilterTags" href=""> لیست تگ ها </a></li>
-                <li><a asp-controller="Question" asp-action="QuestionList" href=""> لیست پرسش ها </a></li>
-                <li><a  asp-controller="Question" asp-action="CreateQuestion" href=""> ثبت پرسش جدید </a></li>
-         
+                <li><a href="/"> صفحه اصلی </a></li>
+                <li><a asp-controller="Account" asp-action="Login"> ورود به سایت </a></li>
+                <li><a asp-controller="Account" asp-action="Register"> عضویت در سایت </a></li>
+                <li><a asp-controller="Question" asp-action="FilterTags"> لیست تگ ها </a></li>
+                <li><a asp-controller="Question" asp-action="QuestionList"> لیست پرسش ها </a></li>
+                <li><a asp-controller="Question" asp-action="CreateQuestion"> ثبت پرسش جدید </a></li>
             </ul>
         </div>
     </div>
     <div class="bottom-footer">
         <div class="container">
             <div class="socials-layer">
-                <a href=""><i class="icon-facebook"></i></a>
-                <a href=""><i class="icon-google-plus"></i></a>
-                <a href=""><i class="icon-instagram-old"></i></a>
-                <a href=""><i class="icon-twitter"></i></a>
-                <a href=""><i class="icon-linkedin"></i></a>
-                <a href=""><i class="icon-telegram"></i></a>
-                <a href=""><i class="icon-rss"></i></a>
+                <a href="/"><i class="icon-instagram-old"></i></a>
+                <a href="/"><i class="icon-linkedin"></i></a>
+                <a href="/"><i class="icon-telegram"></i></a>
             </div>
             <div class="copyright">
-                <p>کلیه حقوق مادی و معنوی این سایت متعلق به <a href="https://Imigration.de"> شرکت برنامه نویسان پیشرو پایدار </a> می باشد . طراحی و برنامه نویسی <a href=""> برنامه نویسان </a></p>
+                <p>کلیه حقوق مادی و معنوی این سایت متعلق به <a href=""> نیما جلال ابادی </a> می باشد . طراحی و برنامه نویسی </p>
             </div>
             <div class="clearfix"></div>
         </div>
