--- a/Imigration.Web/Views/Shared/_Layout.cshtml
+++ b/Imigration.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html class="no-js" dir="rtl" lang="fa-IR">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +15,7 @@
     @await RenderSectionAsync("Styles", false)
 </head>
 <body>
-    <script src="/js/modernizr.js"></script>
+    <script src="js/modernizr.js"></script>
 
     @await RenderSectionAsync("Header", true)
 
@@ -29,3 +30,7 @@
     @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
+
+
+
+  
