--- a/Imigration.Web/Areas/Admin/Views/Shared/_AdminStyles.cshtml
+++ b/Imigration.Web/Areas/Admin/Views/Shared/_AdminStyles.cshtml
@@ -9,7 +9,7 @@
 
 <!--Fonts-->
 <style>
-        @@font-face {
+        font-face {
             font-family: 'WYekan';
             src: url('/admin/fonts/BYekan.woff') format('woff');
             font-weight: normal;
