--- a/Imigration.Web/Views/Question/CreateQuestion.cshtml
+++ b/Imigration.Web/Views/Question/CreateQuestion.cshtml
@@ -113,7 +113,7 @@
                 queryParam: 'name',
                 method: 'get',
                 minChars: 2,
-                placeholder: 'لطفا تگ های مورد نظر خود را وارد کنید',
+                placeholder: 'لطفا تگ های مورد نظر kpm خود را وارد کنید',
                 style: 'direction: ltr !important',
                 minCharsRenderer: function (v) {
                     return 'لطفا حداقل 2 کاراکتر را وارد کنید';
