--- a/Imigration.Web/Views/Shared/_TopMenuPartial.cshtml
+++ b/Imigration.Web/Views/Shared/_TopMenuPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<ul>
-    <li><a asp-action="CreateQuestion" asp-controller="Question">  Submit new Question </a></li>
+    <li><a asp-area="" asp-action="CreateQuestion" asp-controller="Question">  Submit new Question </a></li>
 
-    <li><a asp-action="QuestionList" asp-controller="Question">  LIst new Question </a></li>
+    <li><a asp-area="" asp-action="QuestionList" asp-controller="Question">  LIst new Question </a></li>
 
     <li><a asp-action="FilterTags" asp-controller="Question">  LIst new Tag </a></li>
 
